# zylib

./: .gitignore  CMakeLists.txt  README.md
doc/: frontend_service.txt
eventserver/: EAssert.h  EventBuffer.cpp  EventBuffer.h  EventHandler.h  EventMessageDecoder.cpp  EventMessageDecoder.h  EventRequest.cpp  EventRequest.h  EventResponse.cpp  EventResponse.h  EventServer.cpp  EventServer.h  EventSession.cpp  EventSession.h  EventSessionManager.cpp  EventSessionManager.h  EventTask.cpp  EventTask.h  Makefile
experimental/: Algorithm.h  DateTime.cpp  DateTime.h  FakeLog.cpp  FakeLog.h  RateGenerator.h  Snowflake.h  ThreadPool.h  TypeTraits.h  main.cpp
frontend_service/: FESCallback.cpp  FESCallback.h  FakeLog.h  Makefile  Queue.h  SIDManager.cpp  SIDManager.h  Service.cpp  Service.h  Utility.cpp  Utility.h  main.cpp
game_server/: BoostDefine.h  Config.cpp  GameAssert.h  GameDefine.cpp  GameDefine.h  GameTools.cpp  GameTools.h  GameType.h  GlobalService.cpp  GlobalService.h  Log.cpp  Log.h  Makefile  ServerApp.cpp  ServerApp.h  main.cpp
games/: CMakeLists.txt
games/freakout/: BlackBox.cpp  CMakeLists.txt  FreakOut.cpp
kafkacpp/: Conf.cpp  Conf.h  Consumer.cpp  Consumer.h  Kafkacpp.cpp  Kafkacpp.h  Makefile  Producer.cpp  Producer.h  Topic.cpp  Topic.h
knet/: CallbackManager.cpp  CallbackManager.h  EventManager.cpp  EventManager.h  FakeLog.cpp  FakeLog.h  KNetTypes.cpp  KNetTypes.h  Log.h  Makefile  Message.cpp  Message.h  RPCFuture.cpp  RPCFuture.h  RPCManager.cpp  RPCManager.h  TimerManager.cpp  TimerManager.h  UniformNetwork.cpp  UniformNetwork.h  knet.h  main.cpp
login_server/: Config.h  GlobalService.cpp  GlobalService.h  Log.cpp  Makefile  ServerApp.cpp
misc/: HttpServer.cpp  HttpServer.h  Openssl.cpp
mysqlcpp/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionPool.cpp  ConnectionPool.h  Convert.h  DateTime.cpp  DateTime.h  FakeLog.cpp  FakeLog.h  Field.cpp  Field.h  FieldMeta.cpp  FieldMeta.h  Makefile  MySQLConnection.cpp  MySQLConnection.h  MySqlCpp.h  MysqlcppAssert.h  PreparedStatement.cpp  PreparedStatement.h  QueryResult.cpp  QueryResult.h  ResultSet.cpp  ResultSet.h  Statement.cpp  Statement.h  Transaction.cpp  Transaction.h  Types.h  Utils.cpp  Utils.h  mysqlcpp.h
mysqlcpp/mysqlcpp/: CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.h  Makefile  PreparedStatement.cpp  PreparedStatement.h  Transaction.cpp  mysqlcpp.h
mysqlcpp_ex/: Connection.cpp  Connection.h  ConnectionPool.cpp  ConnectionPool.h  DateTime.cpp  FakeLog.cpp  FakeLog.h  Field.cpp  Field.h  FieldMeta.cpp  FieldMeta.h  MyAssert.h  MySqlCpp.h  MysqlcppAssert.h  ParamBind.cpp  PreparedStatement.cpp  ResultBind.cpp  ResultSet.cpp  SafeString.h  Statement.cpp  Statement.h  Transaction.cpp  Transaction.h  Utils.h
mysqlcpp_old/: Connection.h  ConnectionPool.cpp  ConnectionPool.h  DateTime.h  Field.cpp  FieldMeta.cpp  ParamBind.cpp  ResultBind.h
mysqlcpp_v2/: ConnectionPool.cpp  ConnectionPool.h  DateTime.cpp  DateTime.h  FakeLog.h  ParamBind.h  Statement.cpp  Transaction.cpp  Types.h  Utils.cpp  Utils.h
nel/: Address.h  (+40 more)
network/v4/: CMakeLists.txt  Main.cpp
network/v4/network/: Buffer.cpp  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  Define.h  Event.cpp  Event.h  FakeLog.cpp  FakeLog.h  IOContextPool.cpp  IOContextPool.h  Message.cpp  Message.h  MessageDecoder.cpp  MessageDecoder.h  Network.h  Readme.txt  TcpClient.cpp  TcpClient.h  TcpConnector.cpp  TcpConnector.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  Timer.cpp  Timer.h  Utilities.cpp  Utilities.h
network/v4/test/tcpclient/: CMakeLists.txt  TestTcpClient.cpp
network/v4/test/tcpserver/: CMakeLists.txt  TestTcpServer.cpp
zylib_experimental/: CMakeLists.txt  DateTime.cpp  FakeLog.cpp  FakeLog.h  Stack.h  main.cpp
zysoft/: CMakeLists.txt  README.md  build.bat
zysoft/experimental/: CMakeLists.txt  main.cpp
zysoft/experimental/net/: Acceptor.h  Buffer.h  Defines.h  ErrorCode.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  TcpConnection.h  TcpServer.h  Types.h  Utility.h  console_log.h
zysoft/network/: Channel.h  Define.h  Event.h  FakeLog.h  IOContextPool.h  Message.h  MessageDecoder.h  Network.h  TcpConnector.h  Timer.h  Utilities.h
zysoft/src/: CMakeLists.txt  main.cpp
zysoft/src/network/: Buffer.h  Channel.h  FakeLog.h  IOContextPool.h  MessageDecoder.h  TcpClient.h  TcpConnector.h  TcpServer.h  TcpSocket.h
zysoft/src/winsoft/: Win32Transcode.h
zysoft/src/zysoft/: auto_buffer.h  console_log.h  random.h  time.h  timer.h  utility.h  zysoft.h
zysoft/src/zysoft/memory/: allocator_base.h  auto_buffer.h  new_allocator.h  null_allocator.h
zysoft/src/zysoft/memory/util/: allocator_selector.h
zysoft/src/zysoft/shims/access/: string.h
zysoft/src/zysoft/string/: base64.h  case_functions.h  convert_functions.h  md5.h  split_functions.h  static_string.h  string_tokeniser.h
zysoft/src/zysoft/string/detail/: ngx_base64.h
zysoft/src/zysoft/timer/: timing_wheel.h
zysoft/src/zysoft/web/: uri.h
zysoft/src/zysoft/web/detail/: uri_lexer.h
zysoft/temp/: TestMisc.cpp  ngx_string.cpp  ngx_string.h
zysoft/test/: CMakeLists.txt  TestDefine.cpp  TestDefine.h  TestMD5.cpp  TestMain.cpp  test_auto_buffer.cpp  test_auto_buffer.h
zysoft/test/test_network/tcpclient/: CMakeLists.txt  TestTcpClient.cpp
zysoft/test/test_network/tcpserver/: CMakeLists.txt
zysoft/test/test_stlsoft/: CMakeLists.txt
zysoft/test/test_winsoft/: CMakeLists.txt  TestDefine.h  TestMain.cpp  test_auto_buffer.cpp  test_auto_buffer.h
zysoft/test/test_zysoft/: CMakeLists.txt  TestDefine.cpp  TestDefine.h  TestMD5.cpp  TestMain.cpp  test_allocator.cpp  test_auto_buffer.cpp  test_case_functions.cpp  test_convert_functions.cpp  test_log.h  test_random.cpp  test_split_functions.cpp  test_static_string.cpp  test_timing_wheel.cpp
zysoft/testnetwork/tcpclient/: CMakeLists.txt
zysoft/testnetwork/tcpserver/: CMakeLists.txt
zysoft/tools/: CMakeLists.txt
zysoft/zysoft/: auto_buffer.h  sys.h
zysoft/zysoft/string/: base64.cpp  base64.h  md5.h  utility.h
zysoft/zysoft/string/detail/: ngx_md5.h
(+578 files in other folders)
